# landscaping-visualization-app

./: .env.example  .replit  DEPLOYMENT_GUIDE.md  ENVIRONMENT_VARIABLES.md  README.md  batch-upload.py  deploy-fix.sh  github-upload-list.txt  migrate-subscription-fk.sql  package-lock.json  package.json  prepare-for-github.sh  pyproject.toml  replit.md  run-migrations.js  run-seed.cjs  run-seed.js  run-test-seed.js  seed-subscription-plans.sql  seed-test-subscription-plans.sql  setup-demo-tenant.sql  start_fastapi.py  test-production.js  upload-to-github.py  verify-database.js
attached_assets/: Pasted--Build-very-specific-modification-instructions-if-selectedStyles-curbing-let-curbingDet-1756698367345_1756698367346.txt  Pasted-2025-09-09-12-07-01-39-a9ddccee-User-5-07-01-PM-express-GET-api-tenant-demo-404-in-461ms--1757438745139_1757438745139.txt  Pasted-Task-Fix-foreign-key-constraint-error-and-add-admin-functionality-to-change-user-plans-Please-help--1757604807150_1757604807151.txt  Pasted-You-are-tasked-with-integrating-an-existing-React-component-bundle-into-the-codebase-The-codebas-1756770146806_1756770146807.txt
backend/: main.py  openai_service.py  test_sam2.py
github-upload/: package-lock.json  package.json
server/: admin-auth.ts  auth-routes.ts  auth.ts  clean-sam2-gpt4o.ts  db.ts  fast-sam2-openai.ts  gemini-service.ts  google-auth.ts  index.ts  init-database.ts  landscape-style-config.ts  openai-only.ts  openai.ts  pool-style-config.ts  rate-limit.ts  redis-session-store.ts  routes-clean.ts  routes-no-replicate.ts  routes.ts  sam.ts  sam2-openai.ts  (+5 more)
(+52 files in other folders)
